# GEOstar

./: .dockerignore  CMakeLists.txt  Dockerfile  Eval.cpp  Eval.h  Solver.cpp  Solver.h  Tensor.cpp  Tensor.h  mainEuler.cpp  mainRK2.cpp  mainRK4.cpp
